--- a/Budfirmex/package.json
+++ b/Budfirmex/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~11.0.3",
     "@angular/platform-browser-dynamic": "~11.0.3",
     "@angular/router": "~11.0.3",
+    "@fortawesome/angular-fontawesome": "^0.8.1",
     "@fullcalendar/angular": "^5.5.0",
+    "@fullcalendar/core": "^5.5.0",
     "@fullcalendar/daygrid": "^5.5.0",
     "@fullcalendar/interaction": "^5.5.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.0",
@@ -42,6 +44,7 @@
     "@types/node": "^12.11.1",
     "angular-rename": "^1.0.7",
     "codelyzer": "^6.0.0",
+    "font-awesome": "^4.7.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.1.0",
