--- a/Budfirmex/angular.json
+++ b/Budfirmex/angular.json
@@ -42,8 +42,7 @@
             },
             "scripts": [
               "node_modules/jquery/dist/jquery.min.js",
-              "node_modules/bootstrap/dist/js/bootstrap.min.js",
-              "node_modules/poppers.js/dist/umd/popper.min.js"
+              "node_modules/bootstrap/dist/js/bootstrap.min.js"
             ]
           },
           "configurations": {
